# uk-smart-meter-data

./: .gitignore  README.md  main.ipynb  main.py  pandas-eda.ipynb  pyproject.toml  python.ipynb  raw-parquet-test.py  reset_lf_silver.sh  silver-parquet-test.py
eda/: portfolio_insights.ipynb
energy-smart-meter-pipeline/: README.md  pyproject.toml  raw-parquet-test.py  silver-parquet-test.py
energy-smart-meter-pipeline/eda/: pandas-eda.ipynb
energy-smart-meter-pipeline/sql/: create_gold_avg_load_profile_day.sql  create_gold_peak_demand_substation_day.sql  create_raw_table.sql  qa_business_rules.sql  qa_completeness.sql
energy-smart-meter-pipeline/src/: config.py  load_source_data.py  run_qa_checks.py  transform_daily.py  utils.py  write_run_log.py
energy-smart-meter-pipeline/terraform/: athena.tf  eventbridge.tf  glue_catalog.tf  glue_job.tf  iam.tf  main.tf  outputs.tf  s3.tf  step_functions.tf  terraform.tfvars  variables.tf
energy-smart-meter-pipeline/tests/: test_transform_daily.py
sql/: qa_freshness.sql  qa_nulls.sql  qa_uniqueness.sql
sql/insights/: 01_date_coverage.sql  02_top_substations_by_total.sql  03_system_peak_day.sql  04_avg_load_shape_peak_trough.sql  05_weekday_weekend_profile.sql  06_substation_concentration.sql  (+6 more)
src/: athena_cli.py  athena_utils.py  backfill_glue_range.py  config.py  export_portfolio_images.py  gold_insights.py  transform_daily.py  utils.py  write_run_log.py
terraform/: athena.tf  glue_catalog.tf  glue_job.tf  lakeformation.tf  outputs.tf  s3.tf  step_functions.tf  terraform.tfvars
tests/: test_transform_daily.py
