# Summary: Python project configuration for the smart meter AWS data pipeline.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-smart-meter-pipeline"
version = "0.1.0"
description = "AWS-native data pipeline for UK smart meter half-hourly consumption analytics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Data Engineering Portfolio" }]
dependencies = [
  "boto3>=1.34.0",
  "pyspark>=3.5.0",
  "pyarrow>=16.0.0",
  "pandas>=2.2.0",
  "duckdb>=1.0.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
